--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5|^8.0",
+        "php": "7.4.0",
         "barryvdh/laravel-dompdf": "^0.9.0",
         "biscolab/laravel-recaptcha": "^5.1",
         "fideloper/proxy": "^4.4",
