--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "barryvdh/laravel-cors": "^2.0",
         "barryvdh/laravel-dompdf": "^0.9.0",
         "biscolab/laravel-recaptcha": "^5.1",
         "fideloper/proxy": "^4.4",
