--- a/.env
+++ b/.env
@@ -19,6 +19,7 @@ QUEUE_CONNECTION=sync
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=2500
+SESSION_SECURE_COOKIE=false
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
